--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,6 @@
-psycopg2~=2.9.6
-dict2xml~=1.7.3
 pytest~=7.3.1
-pymongo~=4.3.3
 requests~=2.28.2
 selenium~=4.8.3
-constants~=0.6.0
+allure-pytest==2.13.1
+allure-python-commons==2.13.1
+psycopg2-binary==2.9.6
